[project]
    name = "giskard-deathstart-cli"
    description = "CLI of Death Star developer test aka R2D2."
    version = "1.0"
    authors = [
        { name = "Sébastien Metzger", email = "sebastien.metzger@nomogi.org" },
    ]
    dependencies = [
    ]
    license = { text = "MIT" }
    requires-python = ">=3.10"

[project.optional-dependencies]

[build-system]
    build-backend = "pdm.pep517.api"
    requires = ["pdm-pep517>=1.0.0"]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
    dev = [
        "black>=22.8.0",
        "mypy>=0.971",
    ]
