[project]
    name = "giskard-deathstart-cli"
    description = "CLI of Death Star developer test aka R2D2."
    version = "1.0"
    authors = [
        { name = "Sébastien Metzger", email = "sebastien.metzger@nomogi.org" },
    ]
    dependencies = [
        "fire>=0.4.0",
        "requests>=2.28.1",
        "pydantic[dotenv]>=1.10.2",
        "yaspin>=2.2.0",
    ]
    license = { text = "MIT" }
    requires-python = ">=3.10"

[project.optional-dependencies]

[build-system]
    build-backend = "pdm.pep517.api"
    requires = ["pdm-pep517>=1.0.0"]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
    dev = [
        "black>=22.8.0",
        "mypy>=0.971",
    ]

[tool.pdm.scripts]
    r2d2 = { call = "r2d2:main" }
